Yok bisa yok, dikit lagi. Bismillah...

--- a/web/index.html
+++ b/web/index.html
@@ -141,17 +141,55 @@
                             <h6 class="namePost">Ini Senja.</h6>
                             <h6 class="usernamePost">@sandikalarunyam</h6>
                             <h6 class="datePost"> . 29 Des 2024</h6>
+                            <img class="morePost" src="assets/three-dots-svgrepo-com.svg">
                         </div>
                         <div class="detailPost">
-                            <h6 class="detail"></h6>
+                            <h6 class="reply">membalas</h6>
+                            <h6 class="replyTo">@convomf</h6>
                         </div>
                     </div>
                 </div>
+                <div class="contentPost">
+                    <p class="p1">
+                        Di tiktok saking asbunnya, user sana terbiasa jadiin semua hal candaan.
+                    </p>
+                    <p class="p2">
+                        Di Twitter saking seriusnya, usernya terbiasa ngejudge.
+                    </p>
+                    <p>&nbsp;</p>
+                    <p class="p3">
+                        Iya ga iya, mostly user sosmed punya patternnya sendiri yang dilakuin sama mayoritasnya.
+                    </p>
+                </div>
+                <div class="reactPost">
+                    <img class="comment" src="assets/comment-1-svgrepo-com.svg">
+                    <h5 class="commentCount">47</h5>
+                    <img class="retweet" src="assets/retweet-svgrepo-com.svg">
+                    <h5 class="retweetCount">997</h5>
+                    <img class="like" src="assets/heart-svgrepo-com.svg">
+                    <h5 class="likeCount">12 rb</h5>
+                    <img class="stat" src="assets/stat-1-svgrepo-com.svg">
+                    <h5 class="statCount">225 rb</h5>
+                    <img class="mark" src="assets/bookmark-svgrepo-com.svg">
+                    <img class="share" src="assets/upload-minimalistic-svgrepo-com.svg">
+                </div>
+                <hr>
             </div>
         </div>
 
         <div class="right">
-
+            <button class="searchButton">
+                <img class="searchIcon" src="assets/icons8-search.svg">
+                <h4 class="searchBtnText">Cari</h4>
+            </button>
+            <div class="suggestion">
+                <div class="user1"></div>
+                <div class="user2"></div>
+                <div class="user3"></div>
+            </div>
+            <div class="trending"></div>
+            <button class="GrokButton"></button>
+            <button class="messageButton"></button>
         </div>
     </div>
 </body>
