Final commit Insha Allah

--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="author" content="M Abdullah Azzam">
+    <meta name="description" content="preview of an user personal profile page">
+    <meta http-equiv="refresh" content="10">
+    <title>Zeyn (@zeyn.maaz) / X</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/X_logo_2023_original.svg">
 </head>
@@ -183,13 +186,70 @@
                 <h4 class="searchBtnText">Cari</h4>
             </button>
             <div class="suggestion">
-                <div class="user1"></div>
-                <div class="user2"></div>
-                <div class="user3"></div>
+                <h3 class="suggestText">Anda mungkin suka</h3>
+                <div class="user1">
+                    <img class="user1pp" src="assets/user1.jpg">
+                    <div class="accountUser1">
+                        <h5 class="nameUser1">myy || kinda ia</h5>
+                        <h5 class="usernameUser1">@markmatchalatte</h5>
+                    </div>
+                    <button class="followUser1">Ikuti</button>
+                </div>
+                <div class="user2">
+                    <img class="user2pp" src="assets/user2.jpg">
+                    <div class="accountUser2">
+                        <h5 class="nameUser2">VOA Indonesia</h5>
+                        <h5 class="usernameUser2">@voaindonesia</h5>
+                    </div>
+                    <button class="followUser2">Ikuti</button>
+                </div>
+                <div class="user3">
+                    <img class="user3pp" src="assets/user3.jpg">
+                    <div class="accountUser3">
+                        <h5 class="nameUser3">Detik Travel</h5>
+                        <h5 class="usernameUser3">@detikTravel</h5>
+                    </div>
+                    <button class="followUser3">Ikuti</button>
+                </div>
+                <h4 class="showMore">Tampilkan lebih banyak</h4>
             </div>
-            <div class="trending"></div>
-            <button class="GrokButton"></button>
-            <button class="messageButton"></button>
+            <div class="trending">
+                <h4 class="trendingText">Sedang hangat dibicarakan</h4>
+                <div class="topic1">
+                    <div class="topic1Content">
+                        <h5>Politik • Populer</h5>
+                        <h5 class="topic1Title">Pertamax</h5>
+                        <h5>9.927 Postingan</h5>
+                    </div>
+                    <img class="moreTopic1" src="assets/three-dots-svgrepo-com.svg">
+                </div>
+                <div class="topic2">
+                    <div class="topic2Content">
+                        <h5>Sedang Tren dalam topik Indonesia</h5>
+                        <h5 class="topic2Title">Danantara</h5>
+                        <h5>117 rb Postingan</h5>
+                    </div>
+                    <img class="moreTopic2" src="assets/three-dots-svgrepo-com.svg">
+                </div>
+                <div class="topic3">
+                    <div class="topic3Content">
+                        <h5>Musik • Populer</h5>
+                        <h5 class="topic3Title">Carmen</h5>
+                        <h5>182 rb Postingan</h5>
+                    </div>
+                    <img class="moreTopic3" src="assets/three-dots-svgrepo-com.svg">
+                </div>
+                <h4 class="showMore">Tampilkan lebih banyak</h4>
+            </div>
+            <button class="GrokButton">
+                <img src="assets/grok.svg">
+                <h6>Grok</h6>
+            </button>
+            <button class="messageButton">
+                <h4 class="messageBtnText">Pesan</h4>
+                <img class="addMessage" src="assets/mail-add-svgrepo-com.svg">
+                <img class="moreMessage" src="assets/double-up-chevron-svgrepo-com.svg">
+            </button>
         </div>
     </div>
 </body>
